-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.9.0
-
None
-
3
-
9223372036854775807
This issue was created by maloo for nasf <fan.yong@intel.com>
Please provide additional information about the failure here.
This issue relates to the following test suite run: https://testing.hpdd.intel.com/test_sets/e3ebda8e-3257-11e6-80b9-5254006e85c2.
There is inode reference leak
CMD: trevis-15vm1.trevis.hpdd.intel.com,trevis-15vm2,trevis-15vm3,trevis-15vm4,trevis-15vm8 dmesg Kernel error detected: [11602.132484] VFS: Busy inodes after unmount of dm-1. Self-destruct in 5 seconds. Have a nice day... [11616.134774] VFS: Busy inodes after unmount of dm-3. Self-destruct in 5 seconds. Have a nice day... [11610.008080] VFS: Busy inodes after unmount of dm-2. Self-destruct in 5 seconds. Have a nice day... sanity-scrub test_4b: @@@@@@ FAIL: Error in dmesg detected