LU-8279 scrub: fix inode reference leak

There was logic issue in osd_fid_lookup() to handle remote directory
under the case of MDT file-level backup and restore: the logic wanted
to trigger OI scrub when found the OI mapping for the remote directory
object invalid, but forgot to assign the valid inode to the object as
to such inode's reference cannot for released properly.

Signed-off-by: Fan Yong <fan.yong@intel.com>
Change-Id: Ib2c6dd7a3b43bd75b5e5aaadad91a1a72ef3d54e
Reviewed-on: http://review.whamcloud.com/20792
Tested-by: Jenkins
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Reviewed-by: Alex Zhuravlev <alexey.zhuravlev@intel.com>
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>